Added ToolOptions UI and Persistence
Added a LaunchConfigurationTabGroup which presents a Tool Properties
page. This will allow a user to edit the common tool settings when the
create a debug configuration. These settings are stored in the main
Activator class and can also be retrieved in the LaunchDelegate class.

--- a/org.uat.microchip.toolchain/plugin.xml
+++ b/org.uat.microchip.toolchain/plugin.xml
@@ -316,5 +316,21 @@
          </pattern>
       </errorparser>
    </extension>
+   <extension
+         point="org.eclipse.debug.ui.launchConfigurationTabGroups">
+      <launchConfigurationTabGroup
+            class="org.uat.microchip.debug.ui.launcher.MicrochipTabGroup"
+            id="MicrochipToolPropertiesTabGroup"
+            type="MicrochipLaunchDelegate">
+      </launchConfigurationTabGroup>
+   </extension>
+   <extension
+         point="org.eclipse.debug.core.launchConfigurationTypes">
+      <launchConfigurationType
+            delegate="org.uat.microchip.debug.launcher.MicrochipLaunchDelegate"
+            id="MicrochipLaunchDelegate"
+            name="Debug a program on a Microchip Device">
+      </launchConfigurationType>
+   </extension>
 
 </plugin>
