Added options to WizardPage
Added the options to WizardPage. Still confused about how to set the
build properties with it though.

--- a/org.uat.microchip.toolchain/plugin.xml
+++ b/org.uat.microchip.toolchain/plugin.xml
@@ -412,11 +412,11 @@
             point="org.eclipse.cdt.managedbuilder.ui.newWizardPages">
          <wizardPage
                ID="org.uat.microchip.toolchain.wizardPage"
+               operationClass="org.uat.microchip.toolchain.WizardPage"
                pageClass="org.uat.microchip.toolchain.WizardPage">
-         </wizardPage>
-         <wizardPage
-               ID="org.uat.microchip.toolchain.wizardPage3"
-               pageClass="org.uat.microchip.toolchain.WizardPage3">
+            <projectType
+                  projectTypeID="org.uat.microchip.toolchain.picMicrocontroller">
+            </projectType>
          </wizardPage>
       </extension>
 
